--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "browser_demo": "demo/index.js",
   "browser_website": "website/src/dist/index.js",
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
     "events": "^3.3.0",
     "hotkeys-js": "^3.8.7",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@rollup/plugin-commonjs": "^19.0.1",
