--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-node-resolve": "^13.0.2",
     "rollup": "^2.53.2",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-uglify": "^6.0.4"
   },
   "scripts": {
